Fix content overflowing

--- a/app/assets/stylesheets/last-added-places.css
+++ b/app/assets/stylesheets/last-added-places.css
@@ -10,6 +10,7 @@
     align-items: center;
     border-top: 2px solid #243e2e;
     position: relative;
+    overflow: hidden;
   }
   
   #last-added-places-container h3 {
